@@ -2,27 +2,25 @@ package com.inkflow.crm.module.project.service;
 
 import com.inkflow.crm.common.dto.PageRequest;
 import com.inkflow.crm.common.dto.PageResult;
-import java.util.Comparator;
 import com.inkflow.crm.common.dto.PaginationDto;
+import com.inkflow.crm.common.exception.ErrorCode;
 import com.inkflow.crm.common.exception.ResourceNotFoundException;
-import com.inkflow.crm.domain.entity.Client;
 import com.inkflow.crm.domain.entity.GalleryPhoto;
-import com.inkflow.crm.domain.entity.Location;
 import com.inkflow.crm.domain.entity.Project;
-import com.inkflow.crm.domain.entity.Staff;
 import com.inkflow.crm.domain.enums.GalleryStage;
+import com.inkflow.crm.domain.enums.Permission;
 import com.inkflow.crm.domain.enums.ProjectStatus;
 import com.inkflow.crm.domain.repository.ClientRepository;
 import com.inkflow.crm.domain.repository.GalleryPhotoRepository;
 import com.inkflow.crm.domain.repository.LocationRepository;
 import com.inkflow.crm.domain.repository.ProjectRepository;
 import com.inkflow.crm.domain.repository.StaffRepository;
-import com.inkflow.crm.module.client.dto.ClientSummaryDto;
 import com.inkflow.crm.module.project.dto.*;
-import com.inkflow.crm.module.settings.service.SettingsService;
-import com.inkflow.crm.module.staff.dto.StaffSummaryDto;
+import com.inkflow.crm.module.project.mapper.ProjectMapper;
+import com.inkflow.crm.module.settings.service.RolePermissionService;
 import com.inkflow.crm.security.SecurityUtils;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -30,10 +28,10 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class ProjectService {
 
     private final ProjectRepository projectRepository;
@@ -41,51 +39,40 @@ public class ProjectService {
     private final StaffRepository staffRepository;
     private final GalleryPhotoRepository galleryPhotoRepository;
     private final LocationRepository locationRepository;
-    private final SettingsService settingsService;
+    private final RolePermissionService rolePermissionService;
+    private final ProjectMapper projectMapper;
 
     @Transactional(readOnly = true)
-    public PageResult<ProjectDto> getAllProjects(PageRequest pageRequest, String status, List<UUID> artistIds, UUID clientId, String search, Boolean onlyMine, UUID locationId) {
+    public PageResult<ProjectDto> getAllProjects(
+            PageRequest pageRequest,
+            String status,
+            List<UUID> artistIds,
+            UUID clientId,
+            String search,
+            Boolean onlyMine,
+            UUID locationId) {
         Page<Project> page = getProjectsPage(pageRequest, status, artistIds, clientId, search, onlyMine, locationId);
-        List<ProjectDto> data = page.getContent().stream().map(this::mapToListDto).collect(Collectors.toList());
+        List<ProjectDto> data = page.getContent().stream().map(projectMapper::toListDto).toList();
         return new PageResult<>(data, PaginationDto.from(page));
-    }
-
-    private Page<Project> getProjectsPage(PageRequest pageRequest, String status, List<UUID> artistIds, UUID clientId, String search, Boolean onlyMine, UUID locationId) {
-        UUID tenantId = SecurityUtils.getCurrentTenantId();
-        ProjectStatus projectStatus = status != null ? ProjectStatus.fromValue(status) : null;
-        
-        if (!settingsService.hasPermission(tenantId, SecurityUtils.getCurrentUserRole(), "projects.view_all")) {
-            onlyMine = true;
-        }
-        List<UUID> effectiveArtistIds = artistIds;
-        if (Boolean.TRUE.equals(onlyMine)) {
-            effectiveArtistIds = List.of(SecurityUtils.getCurrentUserId());
-        }
-
-        return projectRepository.findWithFilters(tenantId, projectStatus, effectiveArtistIds, clientId, search, locationId, pageRequest.toPageable());
     }
 
     @Transactional(readOnly = true)
     public ProjectDto getProjectById(UUID id) {
-        UUID tenantId = SecurityUtils.getCurrentTenantId();
-        Project project = projectRepository.findByIdAndTenantIdAndDeletedAtIsNull(id, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.project(id.toString()));
-        return mapToDto(project);
+        return mapToDto(requireProject(SecurityUtils.getCurrentTenantId(), id));
     }
 
     @Transactional
     public ProjectDto createProject(CreateProjectRequest request) {
         UUID tenantId = SecurityUtils.getCurrentTenantId();
 
-        Client client = clientRepository.findByIdAndTenantIdAndDeletedAtIsNull(request.getClientId(), tenantId)
+        var client = clientRepository.findByIdAndTenantIdAndDeletedAtIsNull(request.getClientId(), tenantId)
                 .orElseThrow(() -> ResourceNotFoundException.client(request.getClientId().toString()));
-        Staff artist = staffRepository.findByIdAndTenantIdAndDeletedAtIsNull(request.getArtistId(), tenantId)
+        var artist = staffRepository.findByIdAndTenantIdAndDeletedAtIsNull(request.getArtistId(), tenantId)
                 .orElseThrow(() -> ResourceNotFoundException.staff(request.getArtistId().toString()));
 
-        Location location = null;
-        if (request.getLocationId() != null) {
-            location = locationRepository.findByIdAndTenantIdAndDeletedAtIsNull(request.getLocationId(), tenantId).orElse(null);
-        }
+        var location = request.getLocationId() != null
+                ? locationRepository.findByIdAndTenantIdAndDeletedAtIsNull(request.getLocationId(), tenantId).orElse(null)
+                : null;
 
         Project project = Project.builder()
                 .tenantId(tenantId)
@@ -103,177 +90,122 @@ public class ProjectService {
                 .build();
 
         project = projectRepository.save(project);
+        log.info("Project created: tenantId={} projectId={}", tenantId, project.getId());
         return mapToDto(project);
     }
 
     @Transactional
     public ProjectDto updateProject(UUID id, UpdateProjectRequest request) {
         UUID tenantId = SecurityUtils.getCurrentTenantId();
+        Project project = requireProject(tenantId, id);
 
-        Project project = projectRepository.findByIdAndTenantIdAndDeletedAtIsNull(id, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.project(id.toString()));
-
-        if (request.getTitle() != null) project.setTitle(request.getTitle());
-        if (request.getDescription() != null) project.setDescription(request.getDescription());
-        if (request.getEstimatedCost() != null) project.setEstimatedCost(request.getEstimatedCost());
-        if (request.getTotalSessions() != null) project.setTotalSessions(request.getTotalSessions());
-
-        if (request.getArtistId() != null) {
-            Staff artist = staffRepository.findByIdAndTenantIdAndDeletedAtIsNull(request.getArtistId(), tenantId)
-                    .orElseThrow(() -> ResourceNotFoundException.staff(request.getArtistId().toString()));
-            project.setArtist(artist);
-        }
-
-        if (request.getStatus() != null) {
-            project.setStatus(ProjectStatus.fromValue(request.getStatus()));
-        }
-
-        if (request.getSketchImage() != null) {
-            project.setSketchImage(request.getSketchImage().isBlank() ? null : request.getSketchImage());
-        }
-
+        applyUpdate(tenantId, project, request);
         project = projectRepository.save(project);
+
+        log.info("Project updated: tenantId={} projectId={}", tenantId, id);
         return mapToDto(project);
     }
 
     @Transactional
     public void deleteProject(UUID id) {
         UUID tenantId = SecurityUtils.getCurrentTenantId();
-        Project project = projectRepository.findByIdAndTenantIdAndDeletedAtIsNull(id, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.project(id.toString()));
+        Project project = requireProject(tenantId, id);
+
         project.softDelete();
         projectRepository.save(project);
+        log.info("Project deleted: tenantId={} projectId={}", tenantId, id);
     }
 
     @Transactional
     public ProjectDto.PhotoDto addPhoto(UUID projectId, String url, String stage) {
         UUID tenantId = SecurityUtils.getCurrentTenantId();
-        UUID userId = SecurityUtils.getCurrentUserId();
-
-        Project project = projectRepository.findByIdAndTenantIdAndDeletedAtIsNull(projectId, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.project(projectId.toString()));
+        Project project = requireProject(tenantId, projectId);
 
         GalleryPhoto photo = GalleryPhoto.builder()
                 .tenantId(tenantId)
                 .project(project)
                 .url(url)
                 .stage(GalleryStage.fromValue(stage))
-                .uploadedBy(userId)
+                .uploadedBy(SecurityUtils.getCurrentUserId())
                 .build();
 
         photo = galleryPhotoRepository.save(photo);
-
-        return ProjectDto.PhotoDto.builder()
-                .id(photo.getId())
-                .url(photo.getUrl())
-                .stage(photo.getStage().getValue())
-                .uploadedAt(photo.getUploadedAt())
-                .build();
+        log.info("Project photo added: tenantId={} projectId={} photoId={}", tenantId, projectId, photo.getId());
+        return projectMapper.toPhotoDto(photo);
     }
 
     @Transactional
     public void deletePhoto(UUID projectId, UUID photoId) {
         UUID tenantId = SecurityUtils.getCurrentTenantId();
-        projectRepository.findByIdAndTenantIdAndDeletedAtIsNull(projectId, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.project(projectId.toString()));
+        requireProject(tenantId, projectId);
 
         GalleryPhoto photo = galleryPhotoRepository.findById(photoId)
                 .orElseThrow(() -> new ResourceNotFoundException(
-                        com.inkflow.crm.common.exception.ErrorCode.PROJECT_NOT_FOUND, "Photo not found: " + photoId));
+                        ErrorCode.PROJECT_NOT_FOUND, "Photo not found: " + photoId));
 
         galleryPhotoRepository.delete(photo);
+        log.info("Project photo deleted: tenantId={} projectId={} photoId={}", tenantId, projectId, photoId);
     }
 
-    private ProjectDto mapToListDto(Project project) {
-        return ProjectDto.builder()
-                .id(project.getId())
-                .title(project.getTitle())
-                .description(project.getDescription())
-                .client(ClientSummaryDto.builder()
-                        .id(project.getClient().getId())
-                        .firstName(project.getClient().getFirstName())
-                        .lastName(project.getClient().getLastName())
-                        .phone(project.getClient().getPhone())
-                        .avatar(project.getClient().getAvatar())
-                        .hasMedicalConditions(project.getClient().hasMedicalConditions())
-                        .build())
-                .artist(StaffSummaryDto.builder()
-                        .id(project.getArtist().getId())
-                        .firstName(project.getArtist().getFirstName())
-                        .lastName(project.getArtist().getLastName())
-                        .avatar(project.getArtist().getAvatar())
-                        .calendarColor(project.getArtist().getCalendarColor())
-                        .role(project.getArtist().getRole().getValue())
-                        .build())
-                .status(project.getStatus().getValue())
-                .estimatedCost(project.getEstimatedCost())
-                .totalPaid(project.getTotalPaid())
-                .totalSessions(project.getTotalSessions())
-                .completedSessions(project.getCompletedSessions())
-                .sketchImage(project.getSketchImage())
-                .createdAt(project.getCreatedAt())
-                .build();
+    private Page<Project> getProjectsPage(
+            PageRequest pageRequest,
+            String status,
+            List<UUID> artistIds,
+            UUID clientId,
+            String search,
+            Boolean onlyMine,
+            UUID locationId) {
+        UUID tenantId = SecurityUtils.getCurrentTenantId();
+        ProjectStatus projectStatus = status != null ? ProjectStatus.fromValue(status) : null;
+
+        if (!rolePermissionService.hasPermission(tenantId, SecurityUtils.getCurrentUserRole(), Permission.PROJECTS_VIEW_ALL.getValue())) {
+            onlyMine = true;
+        }
+
+        List<UUID> effectiveArtistIds = Boolean.TRUE.equals(onlyMine)
+                ? List.of(SecurityUtils.getCurrentUserId())
+                : artistIds;
+
+        return projectRepository.findWithFilters(tenantId, projectStatus, effectiveArtistIds, clientId, search, locationId, pageRequest.toPageable());
+    }
+
+    private Project requireProject(UUID tenantId, UUID id) {
+        return projectRepository.findByIdAndTenantIdAndDeletedAtIsNull(id, tenantId)
+                .orElseThrow(() -> ResourceNotFoundException.project(id.toString()));
+    }
+
+    private void applyUpdate(UUID tenantId, Project project, UpdateProjectRequest request) {
+        if (request.getTitle() != null) {
+            project.setTitle(request.getTitle());
+        }
+        if (request.getDescription() != null) {
+            project.setDescription(request.getDescription());
+        }
+        if (request.getEstimatedCost() != null) {
+            project.setEstimatedCost(request.getEstimatedCost());
+        }
+        if (request.getTotalSessions() != null) {
+            project.setTotalSessions(request.getTotalSessions());
+        }
+        if (request.getArtistId() != null) {
+            var artist = staffRepository.findByIdAndTenantIdAndDeletedAtIsNull(request.getArtistId(), tenantId)
+                    .orElseThrow(() -> ResourceNotFoundException.staff(request.getArtistId().toString()));
+            project.setArtist(artist);
+        }
+        if (request.getStatus() != null) {
+            project.setStatus(ProjectStatus.fromValue(request.getStatus()));
+        }
+        if (request.getSketchImage() != null) {
+            project.setSketchImage(request.getSketchImage().isBlank() ? null : request.getSketchImage());
+        }
     }
 
     private ProjectDto mapToDto(Project project) {
         List<ProjectDto.PhotoDto> photos = galleryPhotoRepository.findByProjectId(project.getId())
                 .stream()
-                .map(p -> ProjectDto.PhotoDto.builder()
-                        .id(p.getId())
-                        .url(p.getUrl())
-                        .stage(p.getStage().getValue())
-                        .uploadedAt(p.getUploadedAt())
-                        .build())
-                .collect(Collectors.toList());
+                .map(projectMapper::toPhotoDto)
+                .toList();
 
-        List<ProjectDto.SessionDto> sessions = project.getAppointments().stream()
-                .filter(a -> a.getDeletedAt() == null)
-                .sorted(Comparator.comparing(com.inkflow.crm.domain.entity.Appointment::getStartTime))
-                .map(a -> ProjectDto.SessionDto.builder()
-                        .id(a.getId())
-                        .startTime(a.getStartTime())
-                        .endTime(a.getEndTime())
-                        .status(a.getStatus().getValue())
-                        .serviceId(a.getService() != null ? a.getService().getId() : null)
-                        .serviceName(a.getService() != null ? a.getService().getTitle() : null)
-                        .serviceColor(a.getService() != null ? a.getService().getColor() : null)
-                        .price(a.getPrice())
-                        .finalPrice(a.getFinalPrice())
-                        .waiverSigned(a.getWaiverSigned())
-                        .notes(a.getNotes())
-                        .photosCount(a.getPhotos() != null ? a.getPhotos().size() : 0)
-                        .build())
-                .collect(Collectors.toList());
-
-        return ProjectDto.builder()
-                .id(project.getId())
-                .title(project.getTitle())
-                .description(project.getDescription())
-                .client(ClientSummaryDto.builder()
-                        .id(project.getClient().getId())
-                        .firstName(project.getClient().getFirstName())
-                        .lastName(project.getClient().getLastName())
-                        .phone(project.getClient().getPhone())
-                        .avatar(project.getClient().getAvatar())
-                        .hasMedicalConditions(project.getClient().hasMedicalConditions())
-                        .build())
-                .artist(StaffSummaryDto.builder()
-                        .id(project.getArtist().getId())
-                        .firstName(project.getArtist().getFirstName())
-                        .lastName(project.getArtist().getLastName())
-                        .avatar(project.getArtist().getAvatar())
-                        .calendarColor(project.getArtist().getCalendarColor())
-                        .role(project.getArtist().getRole().getValue())
-                        .build())
-                .status(project.getStatus().getValue())
-                .estimatedCost(project.getEstimatedCost())
-                .totalPaid(project.getTotalPaid())
-                .totalSessions(project.getTotalSessions())
-                .completedSessions(project.getCompletedSessions())
-                .sketchImage(project.getSketchImage())
-                .createdAt(project.getCreatedAt())
-                .photos(photos)
-                .sessions(sessions)
-                .build();
+        return projectMapper.toDto(project, photos, projectMapper.toSessionDtos(project));
     }
 }
