@@ -5,6 +5,7 @@ import com.inkflow.crm.common.dto.PageResult;
 import com.inkflow.crm.common.dto.PaginationDto;
 import com.inkflow.crm.common.exception.BusinessRuleException;
 import com.inkflow.crm.common.exception.ResourceNotFoundException;
+import com.inkflow.crm.common.util.PhoneUtils;
 import com.inkflow.crm.domain.entity.Client;
 import com.inkflow.crm.domain.entity.Request;
 import com.inkflow.crm.domain.enums.ClientStatus;
@@ -17,17 +18,19 @@ import com.inkflow.crm.module.client.mapper.ClientMapper;
 import com.inkflow.crm.module.request.dto.*;
 import com.inkflow.crm.security.SecurityUtils;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class RequestService {
 
     private final RequestRepository requestRepository;
@@ -35,35 +38,26 @@ public class RequestService {
     private final ClientMapper clientMapper;
 
     @Transactional(readOnly = true)
-    public PageResult<RequestDto> getAllRequests(PageRequest pageRequest, String status, List<String> sources, java.time.Instant from, java.time.Instant to, UUID locationId) {
+    public PageResult<RequestDto> getAllRequests(
+            PageRequest pageRequest,
+            String status,
+            List<String> sources,
+            Instant from,
+            Instant to,
+            UUID locationId) {
         Page<Request> page = getRequestsPage(pageRequest, status, sources, from, to, locationId);
-        List<RequestDto> data = page.getContent().stream().map(this::mapToDto).collect(Collectors.toList());
+        List<RequestDto> data = page.getContent().stream().map(this::toDto).toList();
         return new PageResult<>(data, PaginationDto.from(page));
-    }
-
-    private Page<Request> getRequestsPage(PageRequest pageRequest, String status, List<String> sources, java.time.Instant from, java.time.Instant to, UUID locationId) {
-        UUID tenantId = SecurityUtils.getCurrentTenantId();
-        RequestStatus requestStatus = status != null ? RequestStatus.fromValue(status) : null;
-        List<RequestSource> requestSources = sources != null && !sources.isEmpty()
-                ? sources.stream().map(RequestSource::fromValue).collect(Collectors.toList())
-                : null;
-        return requestRepository.findWithFilters(tenantId, requestStatus, requestSources, from, to, locationId, pageRequest.toPageable());
     }
 
     @Transactional(readOnly = true)
     public RequestDto getRequestById(UUID id) {
-        UUID tenantId = SecurityUtils.getCurrentTenantId();
-        Request request = requestRepository.findByIdAndTenantId(id, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.request(id.toString()));
-        return mapToDto(request);
+        return toDto(requireRequest(SecurityUtils.getCurrentTenantId(), id));
     }
 
     @Transactional
     public RequestDto createRequest(CreateRequestRequest createRequest) {
-        UUID tenantId = createRequest.getTenantId();
-        if (tenantId == null) {
-            tenantId = SecurityUtils.getCurrentTenantId();
-        }
+        UUID tenantId = SecurityUtils.getCurrentTenantId();
 
         Request request = Request.builder()
                 .tenantId(tenantId)
@@ -77,16 +71,14 @@ public class RequestService {
                 .build();
 
         request = requestRepository.save(request);
-        return mapToDto(request);
+        log.info("Request created: tenantId={} requestId={}", tenantId, request.getId());
+        return toDto(request);
     }
 
     @Transactional
     public RequestDto updateRequestStatus(UUID id, UpdateRequestStatusRequest updateRequest) {
         UUID tenantId = SecurityUtils.getCurrentTenantId();
-
-        Request request = requestRepository.findByIdAndTenantId(id, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.request(id.toString()));
-
+        Request request = requireRequest(tenantId, id);
         RequestStatus newStatus = RequestStatus.fromValue(updateRequest.getStatus());
 
         switch (newStatus) {
@@ -96,21 +88,20 @@ public class RequestService {
         }
 
         request = requestRepository.save(request);
-        return mapToDto(request);
+        log.info("Request status updated: tenantId={} requestId={} status={}", tenantId, id, newStatus.getValue());
+        return toDto(request);
     }
 
     @Transactional
     public ClientDto convertToClient(UUID requestId, ConvertRequestRequest convertRequest) {
         UUID tenantId = SecurityUtils.getCurrentTenantId();
-
-        Request request = requestRepository.findByIdAndTenantId(requestId, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.request(requestId.toString()));
+        Request request = requireRequest(tenantId, requestId);
 
         if (request.getStatus() == RequestStatus.CONVERTED) {
             throw new BusinessRuleException("Request has already been converted");
         }
 
-        String normalizedPhone = convertRequest.getPhone().replaceAll("[^0-9+]", "");
+        String normalizedPhone = PhoneUtils.normalize(convertRequest.getPhone());
         if (clientRepository.existsByPhoneAndTenantIdAndDeletedAtIsNull(normalizedPhone, tenantId)) {
             throw BusinessRuleException.phoneAlreadyExists(normalizedPhone);
         }
@@ -131,22 +122,43 @@ public class RequestService {
                 .build();
 
         client = clientRepository.save(client);
-
         request.markAsConverted(client);
         requestRepository.save(request);
 
+        log.info("Request converted to client: tenantId={} requestId={} clientId={}", tenantId, requestId, client.getId());
         return clientMapper.toDto(client);
     }
 
     @Transactional
     public void deleteRequest(UUID id) {
         UUID tenantId = SecurityUtils.getCurrentTenantId();
-        Request request = requestRepository.findByIdAndTenantId(id, tenantId)
-                .orElseThrow(() -> ResourceNotFoundException.request(id.toString()));
+        Request request = requireRequest(tenantId, id);
         requestRepository.delete(request);
+        log.info("Request deleted: tenantId={} requestId={}", tenantId, id);
     }
 
-    private RequestDto mapToDto(Request request) {
+    private Page<Request> getRequestsPage(
+            PageRequest pageRequest,
+            String status,
+            List<String> sources,
+            Instant from,
+            Instant to,
+            UUID locationId) {
+        UUID tenantId = SecurityUtils.getCurrentTenantId();
+        RequestStatus requestStatus = status != null ? RequestStatus.fromValue(status) : null;
+        List<RequestSource> requestSources = sources != null && !sources.isEmpty()
+                ? sources.stream().map(RequestSource::fromValue).toList()
+                : null;
+
+        return requestRepository.findWithFilters(tenantId, requestStatus, requestSources, from, to, locationId, pageRequest.toPageable());
+    }
+
+    private Request requireRequest(UUID tenantId, UUID id) {
+        return requestRepository.findByIdAndTenantId(id, tenantId)
+                .orElseThrow(() -> ResourceNotFoundException.request(id.toString()));
+    }
+
+    private RequestDto toDto(Request request) {
         return RequestDto.builder()
                 .id(request.getId())
                 .source(request.getSource().getValue())
